// User object definition for NewsServer.

import "com/janknspank/database/extensions.proto";

option java_package = "com.janknspank.proto";
option java_outer_classname = "UserProto";

message User {
  option (database_collection) = "MongoDB.User";

  extensions 6; // Old fields.

  optional string id = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional string name = 2 [
    (string_length) = 100
  ];

  optional string email = 3 [
    (required) = YES,
    (storage_method) = UNIQUE_INDEX,
    (string_length) = 100
  ];

  optional string linked_in_id = 4 [
    (string_length) = 25
  ];

  optional string facebook_id = 5 [
    (string_length) = 25
  ];

  optional int64 create_time = 7 [
    (required) = YES
  ];

  optional int64 last_login_time = 8;

  optional string linked_in_access_token = 9 [
    (required) = YES,
    (storage_method) = PULL_OUT,
    (string_length) = 500,
    (client_serialization) = EXCLUDE
  ];

  optional LinkedInProfile linked_in_profile = 10 [
    (client_serialization) = EXCLUDE
  ];

  optional LinkedInConnections linked_in_connections = 11 [
    (client_serialization) = EXCLUDE
  ];

  optional string linked_in_profile_photo_url = 18 [
    (string_length) = 200
  ];

  optional AddressBook address_book = 12;
  repeated UrlRating url_rating = 13;
  repeated UrlFavorite url_favorite = 14;
  repeated UserIndustry industry = 15;
  repeated Interest interest = 16;
  repeated Intent intent = 17;
}

message AddressBook {
  optional string data = 1 [
    (required) = YES,
    (string_length) = 102400
  ];

  optional int64 create_time = 2 [
    (required) = YES
  ];
}

message UrlRating {
  optional string url = 1 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional double rating = 2 [
    (required) = YES
  ];

  optional int64 create_time = 3 [
    (required) = YES
  ];
}

message UrlFavorite {
  optional string url_id = 1 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional int64 create_time = 2 [
    (storage_method) = PULL_OUT,
    (required) = YES
  ];
}

message UserIndustry {
  optional int32 industry_code_id = 1 [
    (required) = YES,
    (storage_method) = INDEX
  ];

  // Where did we get this industry from?
  enum Source {
    UNKNOWN = 0;
    USER = 1; // Explicitly added by the user.
    TOMBSTONE = 2; // Tombstone, represents an interest the user explicitly DELETED.
    LINKED_IN_PROFILE = 3; // Phone address book.
  }
  optional Source source = 2 [
    (required) = YES
  ];

  optional int64 create_time = 3 [
    (required) = YES
  ];
}

message Interest {
  optional string id = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional string keyword = 2 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 100
  ];

  // Where did we get this interest from?
  enum Source {
    UNKNOWN = 0;
    USER = 1; // Explicitly added by the user.
    TOMBSTONE = 2; // Tombstone, represents an interest the user explicitly DELETED.
    ADDRESS_BOOK = 3; // Phone address book.
    LINKED_IN_CONNECTIONS = 4;
    LINKED_IN_PROFILE = 5;
  }
  optional Source source = 3 [
    (required) = YES
  ];

  // 'o' for organization, 'p' for person, 'l' for location, 's' for skill.
  // If not known, NULL.
  optional string type = 4 [
    (string_length) = 5,
    (string_charset) = LATIN1
  ];

  optional int64 create_time = 5 [
    (required) = YES
  ];
}

message Intent {
  optional string code = 1 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 5,
    (string_charset) = LATIN1
  ];

  optional int64 create_time = 2 [
    (required) = YES
  ];
}

message LinkedInProfile {
  message Employer {
    optional string name = 1 [
      (required) = YES,
      (string_length) = 100
    ];
    optional string title = 2 [
      (required) = YES,
      (string_length) = 100
    ];
    optional string entity_id = 3 [
      (string_length) = 24
    ];
    optional int64 start_time = 4;
    optional int64 end_time = 5;
  }
  optional Employer current_employer = 1;
  repeated Employer past_employer = 2;

  optional string data = 3 [
    (required) = YES,
    (string_length) = 102400
  ];

  optional int64 create_time = 4 [
    (required) = YES
  ];
}

// TODO: expand out to be one row per connection
// and stop saving the raw data.
message LinkedInConnections {
  optional string data = 2 [
    (required) = YES,
    (string_length) = 102400
  ];

  optional int64 create_time = 3 [
    (required) = YES
  ];
}
